# Repositorio-Alvaro

./: .gitignore  README.md
Semana 2/Montoya_Alvaro_pc2/: .gitignore  CMakeLists.txt  README.md
Semana 2/Montoya_Alvaro_pc2/include/: Solution.h
Semana 2/Montoya_Alvaro_pc2/resultados/: README.md  ejecucion_n4_trace.txt
Semana 2/Montoya_Alvaro_pc2/src/: NQueensSolver.cpp
Semana_1/actividad_1/: actividad1_semana1.md
Semana_2/Montoya_Alvaro_pc2/: CMakeLists.txt  README.md
Semana_2/Montoya_Alvaro_pc2/benchmark/: benchmark_nqueens.cpp
Semana_2/Montoya_Alvaro_pc2/demos/: main.cpp
Semana_2/Montoya_Alvaro_pc2/docs/: API.md  casos_prueba.md  checklist_entrega.md  compilacion_ejecucion.md  conceptos.md  preguntas_comprension.md  preguntas_nqueens.md  preguntas_obligatorias.md  reto_grabado.md
Semana_2/Montoya_Alvaro_pc2/include/: NQueensSolver.h
Semana_2/Montoya_Alvaro_pc2/resultados/: benchmark.txt  compilacion.txt  ejecucion_n4.txt  tests.txt
Semana_2/Montoya_Alvaro_pc2/src/: NQueensSolver.cpp
Semana_2/Montoya_Alvaro_pc2/tests/: test_nqueens.cpp
Semana_2/Montoya_Alvaro_pc2/video/: README.md
Semana_2/actividad_2/: actividad2_semana2.md
Semana_3/actividad_3/: actividad3_semana3.md
